log
Tue 21 Mar 2023 03:46:43 PM UTC: 
 tests:  0|6
total_score: 0/70
d4836c0
Tue 21 Mar 2023 04:03:06 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
95b6420
Tue 21 Mar 2023 04:17:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
de74ac1
Tue 21 Mar 2023 04:18:33 PM UTC: 
 list.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:12: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   36 |     return lista;
      |            ^~~~~
      |            list
list.c:36:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4475cf2
Tue 21 Mar 2023 04:18:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b9e7820
Tue 21 Mar 2023 05:33:33 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
642cf1d
Tue 21 Mar 2023 05:35:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
0b2f8b4
Tue 21 Mar 2023 05:47:55 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
402fb45
Tue 21 Mar 2023 05:49:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
73a48af
Tue 21 Mar 2023 05:49:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
bba8c94
Tue 21 Mar 2023 05:51:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
db828b1
Tue 21 Mar 2023 06:06:46 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|0
c0d86ed
Tue 21 Mar 2023 06:12:08 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
31d331f
Tue 21 Mar 2023 06:23:53 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
fc173a0
Thu 23 Mar 2023 12:48:14 PM UTC: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  10|2
total_score: 45/70
c3d805a
